--- a/uhtml/index.html
+++ b/uhtml/index.html
@@ -95,7 +95,7 @@
       <h1 class="booktitle">Demo Book</h1>
       <h2 class="booksubtitle">Subtitle</h2>
       <h3 class="bookauthor">by The Author(s)</h3>
-      <h4 class="bookversion">Version 1.0B DOI: 10.1000/300 REPO: https://github.com/a-machine/book-demo</h4>
+      <h4 class="bookversion">ID - v1.0B UTC: 02150051ZJUN23 DOI: 10.1000/300 Hash: #6e94b51 github.com/a-machine/book-demo</h4>
     </div>
     <div class="copyrightpage frontmatter">
       <p>Published by: The Publisher</p>
