--- a/epub/EPUB/copyright.xhtml
+++ b/epub/EPUB/copyright.xhtml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
   <head>
-    <title>Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!</title>
+    <title>Book demo</title>
     <meta charset="utf-8" />
   </head>
   <body class="epub copyrightpage">
     <section epub:type="frontmatter copyright-page">
       <div id="copyright">
         <p>
-          Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!
-          by Author; Author; Author; Author; Author
+          Book demo
+          by Author #1; Author #2
         </p>
         <p>Creative Commons International 4.0</p>
-        <p>Title: Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!</p>
-        <p>Author: Author; Author; Author; Author; Author</p>
+        <p>Title: Book demo</p>
+        <p>Author: Author #1; Author #2</p>
         <p>Published by: A Publisher</p>
         <p>Last updated: 2024-10-31</p>
         <p>Created: 2023-06-22</p>
