--- a/epub/EPUB/titlepage.xhtml
+++ b/epub/EPUB/titlepage.xhtml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
   <head>
-    <title>Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!</title>
+    <title>Book demo</title>
     <meta charset="utf-8" />
   </head>
   <body class="epub titlepage">
     <div id="title" epub:type="frontmatter titlepage">
-      <h1 class="booktitle">Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!</h1>
-      <h2 class="booksubtitle">Generate Lorem Ipsum placeholder text</h2>
+      <h1 class="booktitle">Book demo</h1>
+      <h2 class="booksubtitle">Generate Lorem Ipsum </h2>
       <h4 class="bookversion">ID - v1.0B UTC: Fri Jan 12 16:16:55 2024 UTC DOI: 10.1000/100</h4>
-      <h3 class="bookauthor">by Author; Author; Author; Author; Author</h3>
+      <h3 class="bookauthor">by Author #1; Author #2</h3>
     </div>
   </body>
 </html>
