--- a/uhtml/index.html
+++ b/uhtml/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!</title>
+    <title>Book demo</title>
     <link type="text/css" rel="stylesheet" href="css/book.css" />
     <style>
       a.fn {
@@ -92,9 +92,9 @@
   </head>
   <body class="user-contents">
     <div class="titlepage frontmatter">
-      <h1 class="booktitle">Generate Lorem Ipsum placeholder text. Select the number of characters, words, sentences or paragraphs, and hit generate!</h1>
-      <h2 class="booksubtitle">Generate Lorem Ipsum placeholder text</h2>
-      <h3 class="bookauthor">by Author; Author; Author; Author; Author</h3>
+      <h1 class="booktitle">Book demo</h1>
+      <h2 class="booksubtitle">Generate Lorem Ipsum </h2>
+      <h3 class="bookauthor">by Author #1; Author #2</h3>
       <h4 class="bookversion">ID - v1.0B UTC: Fri Jan 12 16:16:55 2024 UTC DOI: 10.1000/100</h4>
     </div>
     <div class="copyrightpage frontmatter">
