--- a/uhtml/index.html
+++ b/uhtml/index.html
@@ -53,7 +53,7 @@
         order: 2;
       }
       @page {
-        size: A4;
+        size: 6in 9in;
         @top-center {
           content: env(doc-title);
         }
@@ -93,7 +93,7 @@
   <body class="user-contents">
     <div class="titlepage frontmatter">
       <h1 class="booktitle">Book demo</h1>
-      <h2 class="booksubtitle">Generate Lorem Ipsum </h2>
+      <h2 class="booksubtitle">Generate Lorem Ipsum</h2>
       <h3 class="bookauthor">by Author #1; Author #2</h3>
       <h4 class="bookversion">ID - v1.0B UTC: Fri Jan 12 16:16:55 2024 UTC DOI: 10.1000/100</h4>
     </div>
